assets/css/_utilities.scss
@mixin bg-text($color) {
  color: $color;

  &:hover {
    color: $color;
  }

  a {
    color: $color;

    &:hover {
      color: $color;
    }
  }
}

.u-bg--orange-line {
  @include bg-text($white);
  background-color: $brand-orange-line;
}

.u-bg--green-line,
.u-bg--green-line-b,
.u-bg--green-line-c,
.u-bg--green-line-d,
.u-bg--green-line-e {
  @include bg-text($white);
  background-color: $brand-green-line;
}

.u-bg--red-line {
  @include bg-text($white);
  background-color: $brand-red-line;
}

.u-bg--blue-line {
  @include bg-text($white);
  background-color: $brand-blue-line;
}

.u-bg--silver-line {
  @include bg-text($white);
  background-color: $brand-silver-line;
}

.u-bg--mattapan-line,
.u-bg--mattapan-trolley {
  @include bg-text($white);
  background-color: $brand-red-line;
}

.u-bg--commuter-rail {
  @include bg-text($white);
  background-color: $brand-commuter-rail;
}

.u-bg--bus {
  @include bg-text($black);
  background-color: $brand-bus;
}

.u-bg--ferry {
  @include bg-text($white);
  background-color: $brand-ferry;
}

.u-bg--subway {
  @include bg-text($white);
  background-color: $brand-subway;
}

.u-bg--the-ride {
  @include bg-text($black);
  background-color: $brand-the-ride;
}

.u-bg--unknown {
  @include bg-text($white);
  background-color: $brand-primary;
}

.u-bg--gray {
  @include bg-text($white);
  background-color: $gray;
}

.u-bg--gray-dark {
  background-color: $gray-dark;
}

.u-bg--gray-lighter {
  background-color: $gray-lighter;
}

.u-bg--gray-lightest {
  background-color: $gray-lightest;
}

.u-bg--gray-bordered-background {
  background-color: $gray-bordered-background;
  box-shadow: 0 0 4px rgba(0, 0, 0, .25);
}

.u-nowrap {
  white-space: nowrap;
}

.u-linethrough {
  text-decoration: line-through;
}

.u-small-caps {
  font-family: $headings-font-family;
  font-size: $font-size-small-caps;
  text-transform: uppercase;
}

.u-no-underline {
  text-decoration: none;
}

.u-pointer {
  cursor: pointer;
}

.u-padding-top {
  padding-top: $base-spacing;
}

.u-error {
  background-color: $form-error-message;
  color: $error-text;
  padding: calc(#{$base-spacing} / 2);
}

.u-error-background {
  background-color: $form-error-message;
}

.u-success-background {
  background-color: $form-success-message;
}

.u-simple-full-bleed {
  margin-left: calc(50% - 50vw);
  width: 100vw;
}

.u-full-bleed {
  // Disable upper margin collapse since we want the bg color here.
  @include margin-clearance;

  background-color: $brand-primary-lightest-contrast;

  // Visual trick to avoid horizontal overflow scrollbars
  // without needing to rebuild/reflow parent layout/grid.
  box-shadow: -66vw 0 $brand-primary-lightest-contrast,
               66vw 0 $brand-primary-lightest-contrast,
              -33vw 0 $brand-primary-lightest-contrast,
               33vw 0 $brand-primary-lightest-contrast;

  margin-bottom: 3 * $base-spacing;
  margin-top: 3 * $base-spacing;

  @include media-breakpoint-up(lg) {
    // Multiple sets are needed at wider breakpoints to fill
    // in the gaps (width is restricted to HTML element width).
    box-shadow: -55vw 0 $brand-primary-lightest-contrast,
                 55vw 0 $brand-primary-lightest-contrast,
                -50vw 0 $brand-primary-lightest-contrast,
                 50vw 0 $brand-primary-lightest-contrast,
                -45vw 0 $brand-primary-lightest-contrast,
                 45vw 0 $brand-primary-lightest-contrast,
                -25vw 0 $brand-primary-lightest-contrast,
                 25vw 0 $brand-primary-lightest-contrast,
                -10vw 0 $brand-primary-lightest-contrast,
                 10vw 0 $brand-primary-lightest-contrast;
  }
}

.u-linked-card {
  position: relative;

  a {
    position: relative;
    z-index: 2;
  }

  .u-linked-card__primary-link {
    display: inline;
    position: static;

    &::after {
      bottom: 0;
      content: '';
      left: 0;
      position: absolute;
      right: 0;
      top: 0;
      z-index: 1;
    }
  }
}

.u-side-scroll {
  @include side-scroll(md);
}

.u-highlight {
  background-color: $brand-primary-lightest-contrast;
}

.u-highlight-gray {
  background-color: $gray-bordered-background;
}

.u-bg-primary-light-contrast {
  background-color: $brand-primary-lightest-contrast;
}

.u-tabular-nums {
  font-variant-numeric: tabular-nums;
}

.u-flex-container {
  display: flex;
}

.u-flex-one {
  flex: 1;
}

.u-gray {
  color: $gray;
}

.u-color-gray-dark {
  color: $gray-dark;
}

.u-color-gray-light {
  color: $gray-light;
}

.u-color-brand-primary-light {
  color: $brand-primary-light;
}

.u-flex-align-self-end {
  align-self: end;
}

// quick margin utilities loosely based off Bootstrap v4
/* stylelint-disable declaration-no-important */
.u-mb-0 {
  margin-bottom: 0 !important;
}

.u-mb-05 {
  margin-bottom: calc(#{$base-spacing} / 2) !important;
}

.u-mb-1 {
  margin-bottom: $base-spacing !important;
}

.u-mb-2 {
  margin-bottom: $base-spacing * 2 !important;
}

.u-mt-0 {
  margin-top: 0 !important;
}

.u-mt-05 {
  margin-top: calc(#{$base-spacing} / 2) !important;
}

.u-mt-1 {
  margin-top: $base-spacing !important;
}

.u-mt-2 {
  margin-top: $base-spacing * 2 !important;
}

.u-mt-3 {
  margin-top: $base-spacing * 3 !important;
}

.u-mr-025 {
  margin-right: $base-spacing * .25 !important;
}
/* stylelint-enable declaration-no-important */

